Fix align new list button, fix style of password field

--- a/dashboard/internet_nl_dashboard/static/css/overrides_dashboard.css
+++ b/dashboard/internet_nl_dashboard/static/css/overrides_dashboard.css
@@ -367,3 +367,19 @@ a.anchor {
     top: -30px;
     visibility: hidden;
 }
+
+
+/* Password fields */
+
+.block input[type="password"] {
+    width: 100%
+}
+
+.block input[type="password"] {
+    border: 2px solid #dadada;
+    border-radius: 4px;
+    font-size: 1em;
+    padding-left: .5em;
+    margin-top: .5em;
+    height: 1.875em
+}
